--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,8 @@
 .DS_Store
 node_modules
-dist
+vue.config.js
 example-dist
+# dist
 
 # local env files
 .env.local
@@ -20,3 +21,9 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+.es*
+
+.github
+babel.config.js
+.prettierrc
